<resources>
    <string name="app_name">Ativ4</string>

    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_button_warning">Entendi</string>
    <string name="text_title_warning">Atenção</string>

    <string name="password_empty">Preencha a senha!</string>
    <string name="email_empty">Preencha o email!</string>

    <string name="email_empty_register_fragment">Preencha um email válido!</string>
    <string name="password_empty_register_fragment">Preencha uma senha!</string>
    <string name="description_empty_form_task_fragment">Preencha uma descrição!</string>
    <string name="text_message_warning">Mensagem</string>
    <string name="new_task">Nova tarefa</string>
    <string name="description_text">Descrição</string>
    <string name="inform_your_new_task">Informe sua nova Tarefa</string>
    <string name="status">Status</string>
    <string name="save">Salvar</string>
    <string name="tabs">Tabs</string>
    <string name="logout">Logout</string>
    <string name="email_text">E-mail</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="password_text">Senha</string>
    <string name="hint_edit_password">Digite sua senha</string>
    <string name="text_title_login_fragment">Login</string>
    <string name="text_title_register_fragment">Criar Conta</string>
    <string name="text_title_recover_fragment">Recuperar Conta</string>
    <string name="text_info_recover_account_fragment">Informe seu e-mail de cadastro para receber \n um link para alteração de senha.</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="add_task">Add task</string>

    <string name="text_button_dialog_confirm_logout">Confirmar</string>
    <string name="text_title_dialog_confira_logout">Deseja sair da sua conta?</string>
    <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair da sua conta</string>

    <string name="text_message_recover_account_fragment">Veja seu e-mail para continuar a recuperação</string>
</resources>