<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RecoverAccountFragment"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_recover_fragment"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal" />


        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMensagem"
                android:text="@string/text_info_recover_account_fragment"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_edit_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="4dp"
                style="@style/EditTextTheme" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register_fragment"
                android:layout_marginTop="16dp"
                style="@style/ButtonTheme"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center"
                android:visibility="invisible"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>